--- a/index.html
+++ b/index.html
@@ -245,6 +245,18 @@
     </div>
 </section>
 
+<section>
+    <div class="container">
+        <div class="advertisement-wrapper">
+            <div class="advertisement">
+                <div class="advertisement-text">
+                    Здесь могла быть ваша реклама
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 
 
 <!--ВЁРСТКА ОТЗЫВОВ-->
