--- a/index.html
+++ b/index.html
@@ -23,13 +23,10 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-<script src="js/main/slick.min.js"></script>
-<script src="js/main/GamesScript.js"></script>
-<script src="js/main/mixitup.min.js"></script>
-<script src="js/main/script.js"></script>
-<script src="js/main/review.js"></script>
+
+
  
-<section>
+<section id="up">
     <div class="container">
         <header class="header-inner">
             <div class="header-button">
@@ -494,9 +491,21 @@
     </div>
 </div>
 
+<a href="#up" class="pageup">
+    <img src="icons/up.svg" alt="" class="pageup">
+</a>
+
+<script src="js/up.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.js"></script>
+<scrip src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.js"></scrip>
+
+<script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+<script src="js/main/slick.min.js"></script>
+<script src="js/main/GamesScript.js"></script>
+<script src="js/main/mixitup.min.js"></script>
+<script src="js/main/script.js"></script>
+<script src="js/main/review.js"></script>
 
 </body>
 
